syntax = "proto3";
option go_package = "./pb";

package pb;

import "model_http_web.proto";
import "rpc_messages.proto";

service HTTPWebService {
	// 创建Web配置
	rpc createHTTPWeb (CreateHTTPWebRequest) returns (CreateHTTPWebResponse);

	// 查找Web配置
	rpc findEnabledHTTPWeb (FindEnabledHTTPWebRequest) returns (FindEnabledHTTPWebResponse);

	// 更改Web配置
	rpc updateHTTPWeb (UpdateHTTPWebRequest) returns (RPCUpdateSuccess);

	// 更改Gzip配置
	rpc updateHTTPWebGzip (UpdateHTTPWebGzipRequest) returns (RPCUpdateSuccess);

	// 更改字符集配置
	rpc updateHTTPWebCharset (UpdateHTTPWebCharsetRequest) returns (RPCUpdateSuccess);

	// 更改请求Header策略
	rpc updateHTTPWebRequestHeaderPolicy (UpdateHTTPWebRequestHeaderPolicyRequest) returns (RPCUpdateSuccess);

	// 更改响应Header策略
	rpc updateHTTPWebResponseHeaderPolicy (UpdateHTTPWebResponseHeaderPolicyRequest) returns (RPCUpdateSuccess);

	// 更改Shutdown
	rpc updateHTTPWebShutdown (UpdateHTTPWebShutdownRequest) returns (RPCUpdateSuccess);

	// 更改Pages
	rpc updateHTTPWebPages (UpdateHTTPWebPagesRequest) returns (RPCUpdateSuccess);

	// 更改访问日志配置
	rpc updateHTTPAccessLog (UpdateHTTPAccessLogRequest) returns (RPCUpdateSuccess);

	// 更改统计配置
	rpc updateHTTPStat (UpdateHTTPStatRequest) returns (RPCUpdateSuccess);

	// 更改缓存配置
	rpc updateHTTPCache (UpdateHTTPCacheRequest) returns (RPCUpdateSuccess);

	// 更改防火墙设置
	rpc updateHTTPFirewall (UpdateHTTPFirewallRequest) returns (RPCUpdateSuccess);
}

// 创建Web配置
message CreateHTTPWebRequest {
	string root = 1;
}

message CreateHTTPWebResponse {
	int64 webId = 1;
}

// 查找Web配置
message FindEnabledHTTPWebRequest {
	int64 webId = 1;
}

message FindEnabledHTTPWebResponse {
	HTTPWeb web = 1;
}

// 更改Web配置
message UpdateHTTPWebRequest {
	int64 webId = 1;
	string root = 2;
}

// 更改Gzip配置
message UpdateHTTPWebGzipRequest {
	int64 webId = 1;
	bytes gzipJSON = 2;
}

// 更改字符集配置
message UpdateHTTPWebCharsetRequest {
	int64 webId = 1;
	string charset = 2;
}

// 更改请求Header策略
message UpdateHTTPWebRequestHeaderPolicyRequest {
	int64 webId = 1;
	int64 headerPolicyId = 2;
}

// 更改响应Header策略
message UpdateHTTPWebResponseHeaderPolicyRequest {
	int64 webId = 1;
	int64 headerPolicyId = 2;
}

// 更改Shutdown
message UpdateHTTPWebShutdownRequest {
	int64 webId = 1;
	bytes shutdownJSON = 2;
}

// 更改Pages
message UpdateHTTPWebPagesRequest {
	int64 webId = 1;
	bytes pagesJSON = 2;
}

// 更改访问日志配置
message UpdateHTTPAccessLogRequest {
	int64 webId = 1;
	bytes accessLogJSON = 2;
}

// 更改统计配置
message UpdateHTTPStatRequest {
	int64 webId = 1;
	bytes statJSON = 2;
}

// 更改缓存配置
message UpdateHTTPCacheRequest {
	int64 webId = 1;
	bytes cacheJSON = 2;
}

// 更改防火墙设置
message UpdateHTTPFirewallRequest {
	int64 webId = 1;
	bytes firewallJSON = 2;
}